resolve #379 on mobile

--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -9,7 +9,7 @@
     transition: transform 0.3s ease;
   }
   .mentors-wrapper.active {
-    transform: translateY(190px);
+    transform: translateY(240px);
     margin-bottom: 50px;
   }
 }
